@@ -1,5 +1,10 @@
 2016-08-21	There is always another bug.
 
+		bin/innocent-pear-dogecoin.cc ,
+		share/innocent-pear/doge-03.cc :
+		- tweaked creation and processing of R_386_PC32 relocations
+		  to properly handle mergeable sections
+
 		share/innocent-pear/doge-i.ld :
 		- now also separates out .data.rel relocations -- apparently
 		  used in g++ 4.8.4 to refer to RTTI constructs -- from the
